[package]
name = "rust_stock_multipanel"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-edit = "0.12.3"
chrono = "0.4.38"
csv = "1.3.0"
decimal = "2.1.0"
num-traits = "0.2.19"
plotters = "0.3.6"
rand = "0.8.5"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
rustfmt = "0.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.122"
ta = "0.5.0"
